-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.12.0
-
None
-
3
-
9223372036854775807
This issue was created by maloo for Nathaniel Clark <nclark@whamcloud.com>
This issue relates to the following test suite run:
https://testing.whamcloud.com/test_sets/8a8435ce-7f88-11e8-b441-52540065bddc
https://testing.whamcloud.com/test_sets/3a06c352-8436-11e8-b441-52540065bddc
https://testing.whamcloud.com/test_sets/3a00bf46-8357-11e8-8fe6-52540065bddc
https://testing.whamcloud.com/test_sets/c4d678d2-8329-11e8-8fe6-52540065bddc
https://testing.whamcloud.com/test_sets/33ac34e0-80aa-11e8-acb8-52540065bddc
test_61 failed with the following error:
write succeed, expect EQUOT
sanity-quota/61 was added in LU-7816 commit 530881fe4ee20b56b0426a5c4d3a2b5226768d06
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity-quota test_61 - write succeed, expect EQUOT
sanity-quota test_61 - write succeed, expect EDQUOT